# misc_ros_scripts

./: CMakeLists.txt  package.xml
scripts/: bag2movie.py  kalibr_rovio_conf.py
